# nfvcl-vnf-manager

./: .gitignore  .gitlab-ci.yml  Dockerfile  Jenkinsfile  LICENSE  README.rst  pyproject.toml  setup.py
osm_ee/: base_ee.py  frontend_client.py  frontend_pb2.py  frontend_server.py
osm_ee/scripts/: ee_start.sh
osm_ee/util/: util_ansible.py  util_ee.py  util_grpc.py  util_kubernetes.py
osm_ee/vnf/: install.sh  vnf_ee.py
