[tool.poetry]
name = "vnf_manager"
version = "0.0.1"
description = ""
authors = ["Alderico Gallo <alderico.gallo@gmail.com>"] # TODO add authors
license = "n\b"
readme = "README.md"

[tool.poetry.scripts]
start = "osm_ee.frontend_server"

[tool.poetry.dependencies]
python = "^3.10"
grpcio-tools = "^1.60.1"
grpclib = "^0.4.7"
pyyaml = "^6.0.1"
kubernetes = "^29.0.0"
requests = "^2.31.0"
paramiko = "^3.4.0"
jinja2 = "^3.1.3"
coloredlogs = "^15.0.1"
verboselogs = "^1.7"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
